docs(java): add Maven, Gradle, sbt, and settings.xml configuration guide (#616)